Get All Schedules created for the study and schedules routes
