# src/app/module/study/study.routes.ts
@@ -4,6 +4,7 @@ import { StudyControllers } from './study.controllers';
 
 const router = express.Router();
 
-router.post('/topic', IsAuthorized, StudyControllers.createTopic);
+router.get('/topic', IsAuthorized, StudyControllers.GetAllTopics);
+router.post('/topic', IsAuthorized, StudyControllers.CreateTopic);
 
 export const StudyRoutes = router;
